      local-sparcv9-target.diff and default to v9.
  * Build with gcc-4.2 except on alpha (untested).
  * patches/any/cvs-ld_library_path.diff: new patch from CVS to fix segfaults
    with empty LD_LIBRARY_PATH variable.
  * rules.d/build.mk: create /etc/ld.so.conf.d/libc.conf to add
    /usr/local/lib as a default search path.  Closes: #395177.

  [ Pierre Habouzit ]
  * rules.d/debhelper.mk: add some magic to copy debian/bug/$pkg/ files into
    /usr/share/bug/.
  * add libc6-i386/presubj to document /usr/lib32 issues not being a
    libc6-i386 problem.
  * add locales/presubj about locales depends that are correct, and tell bug
    reporters how to look for their package being built or not.
  * add patches/any/local-missing-linux_types.h.diff to add missing
    #include <linux/types.h> due to migration to linux-libc-dev.
    Closes: #433962.

  [ Samuel Thibault ]
  * hurd-i386/local-tls-support.diff: new patch to support TLS.
  * debian/sysdeps/hurd.mk (libc_extra_config_options): Removed
    --without-__thread, --without-tls and libc_cv_z_relro=no.
  * hurd-i386/local-atomic-no-multiple_threads.diff: new patch, hurd-i386
    doesn't need the multiple_threads field.
  * hurd-i386/local-gscope.diff: new patch, backport of the CVS global scope.
  * hurd-i386/local-no-strerror_l.diff: new patch to disable non-implemented
    strerror_l().
  * hurd-i386/submitted-lock-intern.diff: new patch to fix a header inclusion.
  * sysdeps/depflags.pl: make libc0.3 depend on TLS-enabled hurd packages.
  * hurd-i386/local-sigsuspend-nocancel.diff: renamed into
    submitted-sigsuspend-nocancel.diff.
  * hurd-i386/submitted-ECANCELED.diff: new patch to fix ECANCELED value.
    Closes: #396135.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 23 Jul 2007 00:27:51 +0200

glibc (2.6-2) unstable; urgency=low

  [ Clint Adams ]
  * Add any/cvs-nis-nss-default.diff: preserve errno.
  * Add any/cvs-vfscanf.diff: add additional test for EOF