@@ -19,6 +19,7 @@ glibc (2.6-3) UNRELEASED; urgency=low
     with empty LD_LIBRARY_PATH variable.
   * rules.d/build.mk: create /etc/ld.so.conf.d/libc.conf to add
     /usr/local/lib as a default search path.  Closes: #395177.
+  * Honor parallel= option in DEB_BUILD_OPTIONS.  Closes: #413744.
 
   [ Pierre Habouzit ]
   * rules.d/debhelper.mk: add some magic to copy debian/bug/$pkg/ files into
@@ -47,7 +48,7 @@ glibc (2.6-3) UNRELEASED; urgency=low
   * hurd-i386/submitted-ECANCELED.diff: new patch to fix ECANCELED value.
     Closes: #396135.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 23 Jul 2007 00:27:51 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 23 Jul 2007 00:36:13 +0200
 
 glibc (2.6-2) unstable; urgency=low
 
